# stling_backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  research_platform.duckdb
app/: db.py
app/api/: chat.py  data.py  tiles.py
app/domain/: __init__.py
app/domain/catalog/: service.py
app/domain/spoken_language/: __init__.py  clustering.py  csv_utils.py  harvest.py  matrix.py  wordlist.py
app/infra/: settings.py
app/pipeline/: __init__.py  executor.py  planner.py  synthesizer.py
app/pipeline/prompts/: __init__.py
app/runtime/: __init__.py  engine.py  observations.py  retry.py  state.py  tracing.py
app/shared/: types.py
app/tools/: __init__.py  registry.py
app/tools/impl/: __init__.py
app/tools/impl/data/: __init__.py  query.py
app/tools/impl/spoken_language/: __init__.py  analysis.py  harvester.py  wordlist.py
app/tools/impl/viz/: __init__.py  renderer.py
app/tools/schemas/: __init__.py
app/utils/: tile_math.py
data/parquet/: concepticon_gloss_index.parquet  distinct_concepticon_glosses.parquet
data/parquet/archaeology/arch_demo_1/: archaeology.parquet
data/parquet/archaeology/arch_demo_2/: archaeology.parquet
data/parquet/genetics/gen_demo_1/: genetics.parquet
data/parquet/sign_language/sign_demo_1/: forms.parquet  languages.parquet  parameters.parquet
data/parquet/testdata/: format.parquet  test_data.parquet
scripts/: fetch_cldf_zenodo.py  generate_synthetic.py  migrate_to_parquet.py  process_glosses.py
test/: test_pipeline.py
test_data/: fixedTime_ArchaelogicalDB.csv
(+694 files in other folders)
