[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=0.9.2",
    "fastapi>=0.129.0",
    "hdbscan>=0.8.41",
    "httpx>=0.28.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "shapely>=2.1.2",
    "uvicorn>=0.41.0",
]
